# woffl

./: .gitignore  LICENSE  README.md  __init__.py  jetpump.py  mix_fractions.py  model_well.py  pvt.py  pyproject.toml  requirements.txt  sandbox.py  tests.py
.github/workflows/: publish-pypi.yml
_deprecated/: _legacy.py  omega.py  ros_param_fit.py
assembly/: __init__.py  batchrun.py  run_pump.py  simplepump.py  sysops.py
data/: jetpump_dims.xlsx  methane_hysys_peng_rob.xlsx  oil_22_api_hysys_peng_rob.xlsx  resmix_hysys_peng_rob.xlsx
flow/: _legacy.py  annflow.py  flowequation.py  jetcheck.py  jetflow.py  jetplot.py  legacy.py  outflow.py  ros_param_fit.py  singlephase.py  twoflow.py  twophase.py
geometry/: __init__.py  geom_test.py  jetpump.py  pipe.py  profile.py  wellprofile.py
pvt/: __init__.py  blackoil.py  deadoil.py  formgas.py  formwat.py  pvt_test.py  resmix.py
tests/: batch_test.py  boil_test.py  e41_test.py  fgas_test.py  flow_test.py  jpump_test.py  outflow_test.py  pvt_test.py  rmix_test.py  wprof_test.py
woffl/: __init__.py
woffl/assembly/: __init__.py  batchrun.py  easypump.py  sysops.py
woffl/flow/: __init__.py  annflow.py  inflow.py  jetcheck.py  jetflow.py  jetplot.py  outflow.py  singlephase.py  twophase.py
woffl/geometry/: __init__.py  forms.py  jetpump.py  pipe.py  wellprofile.py
woffl/pvt/: __init__.py  blackoil.py  formgas.py  formwat.py  resmix.py
