[build-system]
requires = ["setuptools>=61.0.0", "wheel"] # creates the "cheese wheel"
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data"]  # alternatively: `exclude = ["additional*"]`

[project]
name = "woffl"
version = "1.0.0" # install bumpver to automate this and __init__
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3"]
keywords = ["jet pump", "solver", "numerical"]
dependencies = [
    "matplotlib>=3.8.2", # yar
    "numpy>=1.26.3", # yar
    "pandas>=2.1.4", # yar
    "scipy>=1.11.4", # yar
]
requires-python = ">=3.10" # not sure when type hinting was released

[project.urls]
Homepage = "https://github.com/kwellis/woffl"

# what to include https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#custom-discovery
