[build-system]
requires = ["setuptools>=61.0.0", "wheel"] # creates the "cheese wheel"
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data"]  # alternatively: `exclude = ["additional*"]`

[project]
name = "woffl"
version = "1.0.2" # bumpver automatically updates
description = "Numerically solve jet pump equations in multiphase oil wells"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License"
    ]
keywords = ["jet pump", "solver", "numerical", "multiphase"]
dependencies = [
    "matplotlib>=3.8.2", # yar
    "numpy>=1.26.3", # yar
    "pandas>=2.1.4", # yar
    "scipy>=1.11.4", # yar
]
requires-python = ">=3.10" # not sure when type hinting was released

[project.optional-dependencies]
dev = ["bumpver", "isort", "black"]

[project.urls]
Homepage = "https://github.com/kwellis/woffl"


[tool.bumpver]
current_version = "1.0.2" # bumpver update patch
version_pattern = "MAJOR.MINOR.PATCH"
# commit_message = "bump version {old_version} -> {new_version}"
# tag_message = "{new_version}"
# tag_scope = "default"
# pre_commit_hook = ""
# post_commit_hook = ""
# commit = true
# tag = true
# push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"woffl/__init__.py" = ["{version}"]

